added a description to the data object and displayed in a P tag

--- a/Vue3TutorialProject/index.html
+++ b/Vue3TutorialProject/index.html
@@ -12,6 +12,7 @@
     <div id="app">
       <!-- Referring to our Product in our Data using mustache -->
       <h1>{{product}}</h1>
+      <p>{{description}}</p>
     </div>
 
     <!-- Importing the Vue App instead of just JS-->
